tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__plot3d__charts__bar_chart_grouped_with_labels.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(r#\"BarChart[{{1, 2}, {3, 4}, {5, 6}}, ChartLabels -> {\"A\", \"B\", \"C\"}]\"#)"
---
<svg width="360" height="225" viewBox="0 0 3600 2250" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<rect x="0" y="0" width="3600" height="2250" opacity="1" fill="#FFFFFF" stroke="none"/>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="749,100 749,1789 "/>
<text x="670" y="1789" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">
0
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1789 749,1789 "/>
<text x="670" y="1662" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1662 749,1662 "/>
<text x="670" y="1534" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1534 749,1534 "/>
<text x="670" y="1406" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1406 749,1406 "/>
<text x="670" y="1278" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">
2
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1278 749,1278 "/>
<text x="670" y="1150" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1150 749,1150 "/>
<text x="670" y="1022" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1022 749,1022 "/>
<text x="670" y="894" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,894 749,894 "/>
<text x="670" y="766" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">
4
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,766 749,766 "/>
<text x="670" y="638" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,638 749,638 "/>
<text x="670" y="510" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,510 749,510 "/>
<text x="670" y="382" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,382 749,382 "/>
<text x="670" y="254" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">
6
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,254 749,254 "/>
<text x="670" y="126" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,126 749,126 "/>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="750,1790 3499,1790 "/>
<rect x="841" y="1534" width="367" height="255" opacity="1" fill="#5E81B5" stroke="#000000" stroke-width="10"><title>1</title></rect>
<rect x="1208" y="1278" width="366" height="511" opacity="1" fill="#E0932C" stroke="#000000" stroke-width="10"><title>2</title></rect>
<rect x="1757" y="1022" width="367" height="767" opacity="1" fill="#5E81B5" stroke="#000000" stroke-width="10"><title>3</title></rect>
<rect x="2124" y="766" width="367" height="1023" opacity="1" fill="#E0932C" stroke="#000000" stroke-width="10"><title>4</title></rect>
<rect x="2674" y="510" width="366" height="1279" opacity="1" fill="#5E81B5" stroke="#000000" stroke-width="10"><title>5</title></rect>
<rect x="3040" y="254" width="367" height="1535" opacity="1" fill="#E0932C" stroke="#000000" stroke-width="10"><title>6</title></rect>
<line x1="710.0" y1="1790.0" x2="680.0" y2="1790.0" stroke="#666" stroke-width="10"/>
<line x1="710.0" y1="1277.9" x2="680.0" y2="1277.9" stroke="#666" stroke-width="10"/>
<line x1="710.0" y1="765.8" x2="680.0" y2="765.8" stroke="#666" stroke-width="10"/>
<line x1="710.0" y1="253.6" x2="680.0" y2="253.6" stroke="#666" stroke-width="10"/>
<text x="1208.3" y="2060.0" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="180" fill="#666">A</text>
<text x="2125.0" y="2060.0" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="180" fill="#666">B</text>
<text x="3041.7" y="2060.0" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="180" fill="#666">C</text>
</svg>
