tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__plot3d__charts__bar_chart_image_size.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"BarChart[{1, 2, 3}, ImageSize -> 400]\")"
---
<svg width="400" height="250" viewBox="0 0 4000 2500" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<rect x="0" y="0" width="4000" height="2500" opacity="1" fill="#FFFFFF" stroke="none"/>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="749,100 749,2279 "/>
<text x="670" y="2279" dy="0.5ex" text-anchor="end" font-family="sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">
0
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,2279 749,2279 "/>
<text x="670" y="2147" dy="0.5ex" text-anchor="end" font-family="sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,2147 749,2147 "/>
<text x="670" y="2015" dy="0.5ex" text-anchor="end" font-family="sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,2015 749,2015 "/>
<text x="670" y="1883" dy="0.5ex" text-anchor="end" font-family="sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1883 749,1883 "/>
<text x="670" y="1751" dy="0.5ex" text-anchor="end" font-family="sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1751 749,1751 "/>
<text x="670" y="1619" dy="0.5ex" text-anchor="end" font-family="sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">
1
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1619 749,1619 "/>
<text x="670" y="1487" dy="0.5ex" text-anchor="end" font-family="sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1487 749,1487 "/>
<text x="670" y="1355" dy="0.5ex" text-anchor="end" font-family="sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1355 749,1355 "/>
<text x="670" y="1223" dy="0.5ex" text-anchor="end" font-family="sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1223 749,1223 "/>
<text x="670" y="1091" dy="0.5ex" text-anchor="end" font-family="sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1091 749,1091 "/>
<text x="670" y="959" dy="0.5ex" text-anchor="end" font-family="sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">
2
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,959 749,959 "/>
<text x="670" y="827" dy="0.5ex" text-anchor="end" font-family="sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,827 749,827 "/>
<text x="670" y="695" dy="0.5ex" text-anchor="end" font-family="sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,695 749,695 "/>
<text x="670" y="563" dy="0.5ex" text-anchor="end" font-family="sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,563 749,563 "/>
<text x="670" y="431" dy="0.5ex" text-anchor="end" font-family="sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,431 749,431 "/>
<text x="670" y="299" dy="0.5ex" text-anchor="end" font-family="sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">
3
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,299 749,299 "/>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="750,2280 3899,2280 "/>
<rect x="854" y="1619" width="840" height="660" opacity="1" fill="#5E81B5" stroke="#000000" stroke-width="10"><title>1</title></rect>
<rect x="1904" y="959" width="840" height="1320" opacity="1" fill="#5E81B5" stroke="#000000" stroke-width="10"><title>2</title></rect>
<rect x="2954" y="299" width="840" height="1980" opacity="1" fill="#5E81B5" stroke="#000000" stroke-width="10"><title>3</title></rect>
<line x1="710.0" y1="2280.0" x2="680.0" y2="2280.0" stroke="#666" stroke-width="10"/>
<line x1="710.0" y1="1619.4" x2="680.0" y2="1619.4" stroke="#666" stroke-width="10"/>
<line x1="710.0" y1="958.8" x2="680.0" y2="958.8" stroke="#666" stroke-width="10"/>
<line x1="710.0" y1="298.2" x2="680.0" y2="298.2" stroke="#666" stroke-width="10"/>
</svg>
