tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__plot3d__charts__bar_chart_labels_placed_center.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(r#\"BarChart[{5, 9, 24}, ChartLabels -> Placed[{\"Anna\", \"Ben\", \"Carl\"}, Center]]\"#)"
---
<svg width="360" height="225" viewBox="0 0 3600 2250" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<rect x="0" y="0" width="3600" height="2250" opacity="1" fill="#FFFFFF" stroke="none"/>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="749,100 749,2029 "/>
<text x="670" y="2029" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">
0
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,2029 749,2029 "/>
<text x="670" y="1956" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1956 749,1956 "/>
<text x="670" y="1883" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1883 749,1883 "/>
<text x="670" y="1810" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1810 749,1810 "/>
<text x="670" y="1737" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1737 749,1737 "/>
<text x="670" y="1664" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">
5
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1664 749,1664 "/>
<text x="670" y="1591" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1591 749,1591 "/>
<text x="670" y="1518" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1518 749,1518 "/>
<text x="670" y="1445" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1445 749,1445 "/>
<text x="670" y="1372" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1372 749,1372 "/>
<text x="670" y="1299" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">
10
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1299 749,1299 "/>
<text x="670" y="1226" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1226 749,1226 "/>
<text x="670" y="1153" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1153 749,1153 "/>
<text x="670" y="1080" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1080 749,1080 "/>
<text x="670" y="1007" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,1007 749,1007 "/>
<text x="670" y="933" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">
15
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,933 749,933 "/>
<text x="670" y="860" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,860 749,860 "/>
<text x="670" y="787" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,787 749,787 "/>
<text x="670" y="714" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,714 749,714 "/>
<text x="670" y="641" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,641 749,641 "/>
<text x="670" y="568" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">
20
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,568 749,568 "/>
<text x="670" y="495" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,495 749,495 "/>
<text x="670" y="422" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,422 749,422 "/>
<text x="670" y="349" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,349 749,349 "/>
<text x="670" y="276" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,276 749,276 "/>
<text x="670" y="203" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">
25
</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,203 749,203 "/>
<text x="670" y="130" dy="0.5ex" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="104.83870967741936" opacity="1" fill="#666666">

</text>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="709,130 749,130 "/>
<polyline fill="none" opacity="1" stroke="#666666" stroke-width="10" points="750,2030 3499,2030 "/>
<rect x="841" y="1664" width="733" height="365" opacity="1" fill="#5E81B5" stroke="#000000" stroke-width="10"><title>5</title></rect>
<rect x="1757" y="1372" width="734" height="657" opacity="1" fill="#5E81B5" stroke="#000000" stroke-width="10"><title>9</title></rect>
<rect x="2674" y="276" width="733" height="1753" opacity="1" fill="#5E81B5" stroke="#000000" stroke-width="10"><title>24</title></rect>
<line x1="710.0" y1="2030.0" x2="680.0" y2="2030.0" stroke="#666" stroke-width="10"/>
<line x1="710.0" y1="1664.5" x2="680.0" y2="1664.5" stroke="#666" stroke-width="10"/>
<line x1="710.0" y1="1298.9" x2="680.0" y2="1298.9" stroke="#666" stroke-width="10"/>
<line x1="710.0" y1="933.4" x2="680.0" y2="933.4" stroke="#666" stroke-width="10"/>
<line x1="710.0" y1="567.9" x2="680.0" y2="567.9" stroke="#666" stroke-width="10"/>
<line x1="710.0" y1="202.3" x2="680.0" y2="202.3" stroke="#666" stroke-width="10"/>
<text x="1208.3" y="1919.2" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="180" fill="#333">Anna</text>
<text x="2125.0" y="1773.0" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="180" fill="#333">Ben</text>
<text x="3041.7" y="1224.7" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="180" fill="#333">Carl</text>
</svg>
